		'tunefs.lustre --param="ost.quota_type=ug1" $MDTDEV'
		or (for 1.4.12/1.6.5 quota files)
		'tunefs.lustre --param="mdt.quota_type=ug2" $MDTDEV',
		'tunefs.lustre --param="ost.quota_type=ug2" $MDTDEV'
	  For more information, please refer to bugzilla 13904.
	* Output of lfs quota has been made less detailed by default,
	  old (verbose) output can be obtained by using -v option.


Severity   : enhancement
Bugzilla   : 16573
Description: Export bytes_read/bytes_write count on OSC/OST.

Severity   : normal
Bugzilla   : 16237
Description: Early reply size mismatch, MGC loses connection
Details    : Apply the MGS_CONNECT_SUPPORTED mask at reconnect time so
             the connect flags are properly negotiated.

--------------------------------------------------------------------------

2008-08-31 Sun Microsystems, Inc.
	* version 1.6.6
	* Support for kernels:
	 2.6.5-7.312 (SLES 9),
	 2.6.9-67.0.22.EL (RHEL 4),
	 2.6.16.60-0.23 (SLES 10),
	 2.6.18-92.1.6.el5 (RHEL 5),
	 2.6.22.14 vanilla (kernel.org)
	* Client support for unpatched kernels:
	  (see http://wiki.lustre.org/index.php?title=Patchless_Client)
	  2.6.16 - 2.6.22 vanilla (kernel.org)
	* Client support for unpatched kernels:
	  we do not recommend using patchless RHEL4 clients with kernels
	  prior to 2.6.9-55EL (RHEL4U5).
	* Recommended e2fsprogs version: 1.40.11-sun1
	* Note that reiserfs quotas are disabled on SLES 10 in this kernel.
	* RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
	  removed cwd "./" (refer to Bugzilla 14399).
	* A new quota file format has been introduced in 1.6.5.
	  The format conversion from prior releases is handled transparently,
	  but releases older than 1.4.12/1.6.5 don't understand this new
	  format. The automatic format conversion can be avoided by running
	  the following command on the MDS:
		'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	  For more information, please refer to bugzilla 13904.
	* A new quota file format was introduced in 1.6.6.